# dictionary-parser

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-build-test.yml  python-publish.yml  tests.yml
dictionary_generator/: __init__.py  cli.py
dictionary_generator/core/: processor.py
dictionary_generator/utils/: case.py  letters.py
dictionary_parser/: __init__.py  __main__.py  cli.py  main.py
dictionary_parser/core/: processor.py
dictionary_parser/utils/: letters.py  validations.py
docs/: api.rst  conf.py  index.rst  usage.rst
tests/: test_case.py  test_letters.py
