[project]
name = "dictionary-parser"
version = "0.1.0"
description = "A CLI tool for generating csv or json files from word dictionaries."
authors = [{ name = "The Casual Dev", email = "thecasualdev@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "typer[all]",
    "requests"
]

[project.scripts]
dictionary-parser = "dictionary_parser.cli:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
